feat(reloadedForm): Mostrar información predefinida en el formulario obtenida del objeto CompanyData

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
           required
         />
 
-        <label for="primary-color">Primary color</label>
-        <input type="color" name="primary-color" id="primaryColorInput" />
+        <label for="primary-color" id="primaryColorId">Primary color</label>
+        <input type="color" name="primary-color" id="primaryColor" />
 
-        <label for="secondary-color">Background color</label>
-        <input type="color" name="secondary-color" id="backgroundColorInput" />
+        <label for="secondary-color" id="backgroundColorId">Background color</label>
+        <input type="color" name="secondary-color" id="backgroundColor" />
 
         <label for="">Claim</label>
         <input type="text" name="claim" id="companyClaimInput" />
