feat(inputDataForm): Aplicar en la página los datos y modificaciones introducidos por el usuario

--- a/index.html
+++ b/index.html
@@ -106,23 +106,23 @@
         <label for="company-image">Image URL</label>
         <input
           type="url"
-          name="company-image"
+          name="companyImage"
           id="companyImageURLInput"
           required
         />
 
         <label for="primary-color" id="primaryColorId">Primary color</label>
-        <input type="color" name="primary-color" id="primaryColor" />
+        <input type="color" name="primaryColor" id="primaryColor" />
 
         <label for="secondary-color" id="backgroundColorId">Background color</label>
-        <input type="color" name="secondary-color" id="backgroundColor" />
+        <input type="color" name="secondaryColor" id="backgroundColor" />
 
         <label for="">Claim</label>
         <input type="text" name="claim" id="companyClaimInput" />
 
         <label for="text-area">Text</label>
         <textarea
-          name="text-area"
+          name="textArea"
           id="companyTextInput"
           cols="30"
           rows="10"
