feat(local Storage): Implementar localStorage para guardar los datos introducidos por los usuarios y mantenerlos en la página

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="close-from-button" id="closeCompanyFormBtn">
         <span>x</span>
       </div>
-      <form action="" id="#companyForm">
+      <form action="" id="companyForm">
         <label for="company">Company name</label>
         <input type="text" name="company" id="companyNameInput" />
 
